--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "classnames": "^2.2.6",
     "cross-env": "^5.1.4",
+    "docz": "^0.11.0",
     "eslint": "^5.0.1",
     "eslint-config-prettier": "^3.0.1",
     "eslint-config-standard": "^11.0.0",
