docz configuration + callbacks names changed + styling api is more solid

--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
   },
   "scripts": {
     "lint:fix": "eslint src/**/*.js --fix",
+    "lint:watch": "esw src/**/*.js --watch --fix",
     "test": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
-    "prestart": "esw src/**/*.js --watch --fix",
-    "start": "rollup -c -w",
+    "start": "rollup -c -w && npm run lint:watch",
     "prebuild": "npm run lint:fix",
     "build": "rollup -c",
     "prepare": "npm run build",
     "predeploy": "npm run lint:fix && cd example && npm install && npm run build",
     "deploy": "gh-pages -d example/build",
-    "docz:dev": "docz dev",
+    "docz:dev": "docz dev && npm run lint:watch",
     "docz:build": "docz build"
   },
   "peerDependencies": {
@@ -59,7 +59,7 @@
     "docz": "^0.11.0",
     "eslint": "^5.0.1",
     "eslint-config-prettier": "^3.0.1",
-    "eslint-config-standard": "^11.0.0",
+    "eslint-config-standard": "^12.0.0",
     "eslint-config-standard-react": "^7.0.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-node": "^7.0.1",
@@ -79,6 +79,7 @@
     "react-swipeable": "4.3.0",
     "resize-observer-polyfill": "1.5.0",
     "rollup": "^0.64.1",
+    "rollup-plugin-alias": "^1.4.0",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
