--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,17 @@
 {
-  "vendors.js": "/static/js/vendors.4b2069ac.js",
-  "app.js": "/static/js/app.854f3e8e.js",
-  "src-docs-index.js": "/static/js/src-docs-index.7517502c.js",
-  "src-docs-components-mdx-breakpoints.js": "/static/js/src-docs-components-mdx-breakpoints.cf657a71.js",
-  "src-docs-components-mdx-easing.js": "/static/js/src-docs-components-mdx-easing.4de8c1bc.js",
-  "src-docs-components-mdx-enable-auto-play.js": "/static/js/src-docs-components-mdx-enable-auto-play.71501bd8.js",
-  "src-docs-components-mdx-initial-first-item.js": "/static/js/src-docs-components-mdx-initial-first-item.b99d64ee.js",
-  "src-docs-components-mdx-is-rtl.js": "/static/js/src-docs-components-mdx-is-rtl.5f13da27.js",
-  "src-docs-components-mdx-item-padding.js": "/static/js/src-docs-components-mdx-item-padding.645a4220.js",
-  "src-docs-components-mdx-focus-on-select.js": "/static/js/src-docs-components-mdx-focus-on-select.cf585bd9.js",
-  "src-docs-components-mdx-items-to-scroll.js": "/static/js/src-docs-components-mdx-items-to-scroll.d63499a0.js",
-  "src-docs-components-mdx-items-to-show.js": "/static/js/src-docs-components-mdx-items-to-show.f0bee337.js",
-  "src-docs-components-mdx-on-user-next.js": "/static/js/src-docs-components-mdx-on-user-next.6d61914c.js",
-  "runtime~app.js": "/static/js/runtime~app.6f29d85408604ff7cbe9.js",
-  "index.html": "/index.html"
+  "vendors.js": "react-elastic-carousel/static/js/vendors.8556c187.js",
+  "app.js": "react-elastic-carousel/static/js/app.1d07b6b3.js",
+  "src-docs-index.js": "react-elastic-carousel/static/js/src-docs-index.7517502c.js",
+  "src-docs-components-mdx-breakpoints.js": "react-elastic-carousel/static/js/src-docs-components-mdx-breakpoints.cf657a71.js",
+  "src-docs-components-mdx-easing.js": "react-elastic-carousel/static/js/src-docs-components-mdx-easing.4de8c1bc.js",
+  "src-docs-components-mdx-focus-on-select.js": "react-elastic-carousel/static/js/src-docs-components-mdx-focus-on-select.da004d9b.js",
+  "src-docs-components-mdx-enable-auto-play.js": "react-elastic-carousel/static/js/src-docs-components-mdx-enable-auto-play.284b27ac.js",
+  "src-docs-components-mdx-initial-first-item.js": "react-elastic-carousel/static/js/src-docs-components-mdx-initial-first-item.107aa1a1.js",
+  "src-docs-components-mdx-is-rtl.js": "react-elastic-carousel/static/js/src-docs-components-mdx-is-rtl.a96d7f28.js",
+  "src-docs-components-mdx-item-padding.js": "react-elastic-carousel/static/js/src-docs-components-mdx-item-padding.0e89fc98.js",
+  "src-docs-components-mdx-items-to-show.js": "react-elastic-carousel/static/js/src-docs-components-mdx-items-to-show.6e698dde.js",
+  "src-docs-components-mdx-on-user-next.js": "react-elastic-carousel/static/js/src-docs-components-mdx-on-user-next.96b6c0e1.js",
+  "src-docs-components-mdx-items-to-scroll.js": "react-elastic-carousel/static/js/src-docs-components-mdx-items-to-scroll.d07e0a95.js",
+  "runtime~app.js": "react-elastic-carousel/static/js/runtime~app.4056ac829f51921d9480.js",
+  "index.html": "react-elastic-carousel/index.html"
 }
