--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,17 @@
 {
-  "vendors.js": "react-elastic-carousel/static/js/vendors.8556c187.js",
-  "app.js": "react-elastic-carousel/static/js/app.d73bb166.js",
-  "src-docs-index.js": "react-elastic-carousel/static/js/src-docs-index.7517502c.js",
-  "src-docs-components-mdx-breakpoints.js": "react-elastic-carousel/static/js/src-docs-components-mdx-breakpoints.cf657a71.js",
-  "src-docs-components-mdx-focus-on-select.js": "react-elastic-carousel/static/js/src-docs-components-mdx-focus-on-select.e792cde1.js",
-  "src-docs-components-mdx-easing.js": "react-elastic-carousel/static/js/src-docs-components-mdx-easing.36a6d762.js",
-  "src-docs-components-mdx-initial-first-item.js": "react-elastic-carousel/static/js/src-docs-components-mdx-initial-first-item.b99d64ee.js",
-  "src-docs-components-mdx-enable-auto-play.js": "react-elastic-carousel/static/js/src-docs-components-mdx-enable-auto-play.3099dead.js",
-  "src-docs-components-mdx-is-rtl.js": "react-elastic-carousel/static/js/src-docs-components-mdx-is-rtl.a96d7f28.js",
-  "src-docs-components-mdx-items-to-scroll.js": "react-elastic-carousel/static/js/src-docs-components-mdx-items-to-scroll.179ce9af.js",
-  "src-docs-components-mdx-item-padding.js": "react-elastic-carousel/static/js/src-docs-components-mdx-item-padding.19cd81eb.js",
-  "src-docs-components-mdx-items-to-show.js": "react-elastic-carousel/static/js/src-docs-components-mdx-items-to-show.f0bee337.js",
-  "src-docs-components-mdx-on-user-next.js": "react-elastic-carousel/static/js/src-docs-components-mdx-on-user-next.6d61914c.js",
-  "runtime~app.js": "react-elastic-carousel/static/js/runtime~app.f89f43da0ef0d8ec0919.js",
-  "index.html": "react-elastic-carousel/index.html"
+  "vendors.js": "//sag1v.github.io/react-elastic-carousel/static/js/vendors.91bbb3e6.js",
+  "app.js": "//sag1v.github.io/react-elastic-carousel/static/js/app.53cf8a1c.js",
+  "src-docs-index.js": "//sag1v.github.io/react-elastic-carousel/static/js/src-docs-index.7517502c.js",
+  "src-docs-components-mdx-breakpoints.js": "//sag1v.github.io/react-elastic-carousel/static/js/src-docs-components-mdx-breakpoints.cf657a71.js",
+  "src-docs-components-mdx-easing.js": "//sag1v.github.io/react-elastic-carousel/static/js/src-docs-components-mdx-easing.4de8c1bc.js",
+  "src-docs-components-mdx-initial-first-item.js": "//sag1v.github.io/react-elastic-carousel/static/js/src-docs-components-mdx-initial-first-item.0b62b4f7.js",
+  "src-docs-components-mdx-enable-auto-play.js": "//sag1v.github.io/react-elastic-carousel/static/js/src-docs-components-mdx-enable-auto-play.284b27ac.js",
+  "src-docs-components-mdx-focus-on-select.js": "//sag1v.github.io/react-elastic-carousel/static/js/src-docs-components-mdx-focus-on-select.b8b960d1.js",
+  "src-docs-components-mdx-item-padding.js": "//sag1v.github.io/react-elastic-carousel/static/js/src-docs-components-mdx-item-padding.645a4220.js",
+  "src-docs-components-mdx-is-rtl.js": "//sag1v.github.io/react-elastic-carousel/static/js/src-docs-components-mdx-is-rtl.02d4e7d5.js",
+  "src-docs-components-mdx-items-to-show.js": "//sag1v.github.io/react-elastic-carousel/static/js/src-docs-components-mdx-items-to-show.6e698dde.js",
+  "src-docs-components-mdx-items-to-scroll.js": "//sag1v.github.io/react-elastic-carousel/static/js/src-docs-components-mdx-items-to-scroll.5bd5453f.js",
+  "src-docs-components-mdx-on-user-next.js": "//sag1v.github.io/react-elastic-carousel/static/js/src-docs-components-mdx-on-user-next.6d61914c.js",
+  "runtime~app.js": "//sag1v.github.io/react-elastic-carousel/static/js/runtime~app.5b9673c0f7e269056677.js",
+  "index.html": "//sag1v.github.io/react-elastic-carousel/index.html"
 }
