--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "classnames": "^2.2.6",
     "cross-env": "^5.1.4",
     "docz": "^0.11.2",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
     "eslint": "^5.0.1",
     "eslint-config-prettier": "^3.0.1",
     "eslint-config-standard": "^12.0.0",
@@ -75,6 +77,7 @@
     "react-resizable": "^1.7.5",
     "react-scripts": "^1.1.4",
     "react-swipeable": "4.3.0",
+    "react-test-renderer": "^16.5.2",
     "resize-observer-polyfill": "1.5.0",
     "rollup": "^0.64.1",
     "rollup-plugin-alias": "^1.4.0",
@@ -99,6 +102,7 @@
     "flexibale",
     "rtl",
     "right-to-left",
-    "resize"
+    "resize",
+    "touch"
   ]
 }
