--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-elastic-carousel",
-  "version": "0.1.13",
+  "version": "0.1.14",
   "description": "A flexible and responsive carousel component for react",
   "author": "sag1v (Sagiv ben giat)",
   "license": "MIT",
@@ -14,14 +14,14 @@
   },
   "scripts": {
     "lint:fix": "eslint src/**/*.js --fix",
-    "lint:watch": "esw src/**/*.js --watch --fix",
+    "lint:watch": "esw --watch --fix src/**/*.js",
     "test": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
     "prebuild": "npm run lint:fix",
     "build": "rollup -c",
     "prepare": "npm run build",
     "deploy": "gh-pages -d demo",
-    "docz:dev": "docz dev && npm run lint:watch",
+    "docz:dev": "concurrently -k -r -s all \"npm run test:watch\" \"docz dev\" \"npm run lint:watch\"",
     "docz:build": "docz build"
   },
   "peerDependencies": {
