--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^9.0.0",
     "classnames": "^2.2.6",
+    "concurrently": "^4.0.1",
     "cross-env": "^5.1.4",
     "docz": "^0.11.2",
     "enzyme": "^3.6.0",
