--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "eslint-plugin-standard": "^3.1.0",
     "eslint-watch": "^4.0.2",
     "gh-pages": "^1.2.0",
+    "jest-cli": "^23.6.0",
     "prettier": "1.14.2",
     "prettier-eslint": "^8.8.2",
     "react": "^16.5.0",
