--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-elastic-carousel",
-  "version": "0.1.17",
+  "version": "0.1.18",
   "description": "A flexible and responsive carousel component for react",
   "author": "sag1v (Sagiv ben giat)",
   "license": "MIT",
@@ -96,6 +96,7 @@
   ],
   "keywords": [
     "react",
+    "react-carousel",
     "carousel",
     "responsive",
     "reactjs",
