:arrow_up: upgrade styled-components

--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-url": "^1.4.0",
-    "styled-components": "^4.0.3"
+    "styled-components": "5.0.1"
   },
   "files": [
     "dist"
