--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "scripts": {
     "start": "concurrently -r -k -s all \"yarn run test:watch\" \"docz dev\" \"yarn run lint:watch\"",
-    "lint:fix": "eslint src/**/*.js --fix",
-    "lint:watch": "esw --watch --fix src/**/*.js",
+    "lint:fix": "eslint src/**/*/*.js --fix",
+    "lint:watch": "esw --watch --fix src/**/*/*.js",
     "test": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
     "prebuild": "yarn run lint:fix",
