--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "build-doc": "docz build",
     "deploy-doc": "gh-pages -d demo"
   },
+  "types": "./dist/index.d.ts",
   "peerDependencies": {
     "prop-types": "^15.5.4",
     "react": "^15.0.0 || ^16.0.0",
