--- a/package.json
+++ b/package.json
@@ -25,6 +25,12 @@
     "deploy-doc": "gh-pages -d demo"
   },
   "types": "./dist/index.d.ts",
+  "dependencies": {
+    "classnames": "^2.2.6",
+    "react-only-when": "^1.0.2",
+    "react-swipeable": "^5.5.1",
+    "resize-observer-polyfill": "1.5.0"
+  },
   "peerDependencies": {
     "prop-types": "^15.5.4",
     "react": "^15.0.0 || ^16.0.0",
@@ -53,7 +59,6 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^9.0.0",
-    "classnames": "^2.2.6",
     "concurrently": "^4.1.0",
     "cross-env": "^5.1.4",
     "docz": "^2.3.0-alpha.6",
@@ -76,18 +81,16 @@
     "prettier-eslint": "^8.8.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-only-when": "^1.0.2",
     "react-resizable": "^1.7.5",
     "react-scripts": "^2.1.8",
     "react-test-renderer": "^16.5.2",
-    "resize-observer-polyfill": "1.5.0",
     "rollup": "^0.64.1",
     "rollup-plugin-alias": "^1.4.0",
+    "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-url": "^1.4.0",
     "styled-components": "^5.1.0"
@@ -111,8 +114,5 @@
   ],
   "resolutions": {
     "ansi-styles": "^3.2.0"
-  },
-  "dependencies": {
-    "react-swipeable": "^5.5.1"
   }
 }
