--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "babel-eslint": "^9.0.0",
     "concurrently": "^4.1.0",
     "cross-env": "^5.1.4",
-    "docz": "^2.3.0-alpha.6",
+    "docz": "^2.3.1",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "eslint": "5.12.0",
