--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "npm": ">=5"
   },
   "scripts": {
-    "start": "concurrently -r -k -s all \"yarn run test:watch\" \"docz dev\" \"yarn run lint:watch\"",
+    "start": "concurrently -r -k -s all \"docz dev\" \"yarn run lint:watch\"",
     "lint:fix": "eslint src/. --fix",
     "lint:watch": "esw --watch --fix src/.",
     "test": "cross-env CI=1 react-scripts test --env=jsdom",
@@ -33,8 +33,8 @@
   },
   "peerDependencies": {
     "prop-types": "^15.5.4",
-    "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
@@ -79,8 +79,8 @@
     "gh-pages": "^2.2.0",
     "prettier": "1.14.2",
     "prettier-eslint": "^8.8.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-resizable": "^1.7.5",
     "react-scripts": "^2.1.8",
     "react-test-renderer": "^16.5.2",
