--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-elastic-carousel",
-  "version": "0.9.1",
+  "version": "0.9.2-beta",
   "description": "A flexible and responsive carousel component for react",
   "author": "sag1v (Sagiv Ben Giat)",
   "license": "MIT",
