--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "repository": "sag1v/react-elastic-carousel",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
+  "types": "./dist/index.d.ts",
   "jsnext:main": "dist/index.es.js",
   "engines": {
     "node": ">=8",
@@ -24,7 +25,11 @@
     "build-doc": "docz build",
     "deploy-doc": "gh-pages -d demo"
   },
-  "types": "./dist/index.d.ts",
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint:fix"
+    }
+  },
   "dependencies": {
     "classnames": "^2.2.6",
     "react-only-when": "^1.0.2",
@@ -77,6 +82,7 @@
     "eslint-watch": "^4.0.2",
     "gatsby-plugin-google-analytics": "^2.1.34",
     "gh-pages": "^2.2.0",
+    "husky": "^4.3.0",
     "prettier": "1.14.2",
     "prettier-eslint": "^8.8.2",
     "react": "^16.12.0",
