--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint:fix"
+      "pre-commit": "npm lint:fix"
     }
   },
   "dependencies": {
