--- a/package.json
+++ b/package.json
@@ -25,10 +25,8 @@
     "build-doc": "docz build",
     "deploy-doc": "gh-pages -d demo"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm lint:fix"
-    }
+  "lint-staged": {
+    "*.js": "yarn lint:fix"
   },
   "dependencies": {
     "classnames": "^2.2.6",
@@ -83,6 +81,7 @@
     "gatsby-plugin-google-analytics": "^2.1.34",
     "gh-pages": "^2.2.0",
     "husky": "^4.3.0",
+    "lint-staged": "^10.5.2",
     "prettier": "1.14.2",
     "prettier-eslint": "^8.8.2",
     "react": "^16.12.0",
