--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "scripts": {
     "start": "concurrently -r -k -s all \"docz dev\" \"yarn run lint:watch\"",
+    "demo": "rollup --config rollup.config.demo.js --watch",
     "lint:fix": "eslint src/. --fix",
     "lint:watch": "esw --watch --fix src/.",
     "test": "cross-env CI=1 react-scripts test --env=jsdom",
@@ -61,6 +62,7 @@
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
+    "@rollup/plugin-replace": "^2.3.4",
     "babel-eslint": "^9.0.0",
     "concurrently": "^4.1.0",
     "cross-env": "^5.1.4",
@@ -95,8 +97,10 @@
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-copy": "^3.3.0",
+    "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-postcss": "^1.6.2",
+    "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-url": "^1.4.0",
     "styled-components": "^5.1.0"
   },
