--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-elastic-carousel",
-  "version": "0.11.3",
+  "version": "0.11.4",
   "description": "A flexible and responsive carousel component for react",
   "author": "sag1v (Sagiv Ben Giat)",
   "license": "MIT",
@@ -40,8 +40,8 @@
   },
   "peerDependencies": {
     "prop-types": "^15.5.4",
-    "react": "^15.0.0 || ^17.0.0",
-    "react-dom": "^15.0.0 || ^17.0.0",
+    "react": "15 - 17",
+    "react-dom": "15 - 17",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
